# PyWars

./: .gitignore  404.html  LICENSE  Readme.md  ex.printing.html  ex.pyrogram.html  ex.telegram.html  illiterate.yml  index.html  makefile  mkdocs.yml  pw.__init__.html  pw.client.html  pw.ty.__init__.html  pw.ty.digests.html  pw.ty.types.html  pw.types.html  pyproject.toml  sitemap.xml
.github/workflows/: python-publish.yml
PyWars/: __init__.py  client.py
PyWars/types/: digests.py  types.py
ex.printing/: index.html
ex.telegram/: index.html
examples/: printing.py  telegram.py
pw.__init__/: index.html
pw.client/: index.html
pw.ty.__init__/: index.html
pw.ty.digests/: index.html
pw.ty.types/: index.html
search/: search_index.json
