[tool.poetry]
name = "PyWars"
version = "0.1.0"
description = "Public topic consumer for Chat Wars API"
authors = ["Jesús Enrique <jesusefg12@gmail.com>"]
license = "MIT"
readme = "Readme.md"

[tool.poetry.dependencies]
python = "^3.6"
faust = { version = "1.10.4" }


# Development dependencies

illiterate = { version = "^0.4", python = ">=3.6,<4.0", optional = true}
mkdocs = { version = "^1.0.4", optional = true }
pymdown-extensions = { version= "^8.2", optional = true}
mkdocs-material = { version = "^4.6.0", optional = true }

[tool.poetry.dev-dependencies]



[tool.poetry.extras]

dev = [
    "illiterate",
    "mkdocs",
    "pymdown-extensions",
    "mkdocs-material"
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
